fix booking user